--- a/index.html
+++ b/index.html
@@ -26,201 +26,16 @@
 </head>
 
 <body>
-    <!--<div class="loader"></div> -->
-    <header id="header">
-        <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light" id="main-navigation">
-            <div class="container">
-                <a class="navbar-brand scroll-trigger" href="#" id="header-logo">
-                    <img src="img/logo.png" class="img-fluid" width="82" height="50"
-                        alt="Radi Trading Logo">
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ml-auto text-center">
-                        <li class="nav-item active">
-                            <a class="nav-link text-dark scroll-trigger" href="#home">Accueil
-                                <span class="sr-only">(current)</span>
-                            </a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link text-dark scroll-trigger" href="#about">Notre Société</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link text-dark scroll-trigger" href="#products">Nos Produits</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link text-dark scroll-trigger" href="#services">Nos Services</a>
-                        </li>
-                        <li class="nav-item mr-md-3">
-                            <a class="nav-link text-dark scroll-trigger" href="#contact">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <main id="main" role="main">
-        <section class="main-banner text-center" id="home">
-            <h1 class="display-2">Bienvenue chez Radi Trading</h1>
-            <p class="lead pt-3">Nous sommes une entreprise professionnelle spécialisée dans l'importation,
-                la distribution et l'installation de produits verriers pour la construction à travers le Maroc.
-            </p>
-            <img src="img/logo.png" class="img-fluid" alt="Radi Trading Logo">
-        </section>
-
-        <section id="about">
-            <div class="container text-left py-5">
-                <h2>Qui sommes nous</h2>
-                <p>Radi Trading est une entreprise spécialisée dans les produits en verre au service de l'architecture contemporaine.
-                    Nous procédons à l'import et la distribution de produits verriers à destination du bâtiment,
-                    de la décoration et l'aménagement d'intérieur. La gamme des vitrages est segmentée selon
-                    le niveau de performance et de leur utilisation.
-                    Cela de l'isolation thermique et phonique à la protection contre l'effraction et la vandalisme.
-                    <br>
-                    Nous offerons une gamme variée des produits verriers de qualité pour une variété d'applications:
-                </p>
-
-                <ul>
-                    <li>Simple vitrage ordinaire</li>
-                    <li>Vitrage feuilleté non acoustique</li>
-                    <li>Vitrage feuilleté acoustique</li>
-                    <li>Double vitrage ordinaire</li>
-                    <li>Double vitrage feuilleté</li>
-                    <li>Double vitrage feuilleté acoustique</li>
-                    <li>Triple vitrage ordinaire</li>
-                    <li>Triple vitrage feuilleté</li>
-                    <li>Triple vitrage feuilleté acoustique</li>
-                </ul>
-            </div>
+        <section>
+            Domain for sale. a href="mailto:erradi@live.com?Subject=RT.ma Domain Enquiry" target="_top">📧 erradi@live.com</a></div>
         </section>
         <hr>
-
-        <section id="products" class="py-5"  >
-            <div class="section-content">
-                <div class="container text-center">
-                    <h2>Nos produits</h2>
-                    <hr>
-                    <p class="lead">Nos offrons une gamme exhaustive du verre à destination du bâtiment,
-                        de la décoration et l'aménagement d'intérieur.
-                    </p>
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="card-deck">
-                                <div class="card">
-                                    <img src="img/products/clear-glass.jpg" class="img-fluid" alt="Le verre clair">
-                                    <div class="card-body">
-                                        <h4 class="card-title">Le verre clair</h4>
-                                        <!--h6 class="card-subtitle">Support card subtitle</h6-->
-                                        <p class="card-text">Le verre clair est le vitrage de base qui se caractérise
-                                            par sa transparence et sa simplicité. Il offer un bon éclairage naturel
-                                            des espaces intérieurs.
-                                        </p>
-                                        <!--button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">learn more</button-->
-                                    </div>
-                                </div>
-                                <div class="card">
-                                    <img src="img/products/reflective-glass.jpg" class="img-fluid" alt="Verre réfléchissant">
-                                    <div class="card-body">
-                                        <h4 class="card-title">Verre réfléchissant</h4>
-                                        <!--h6 class="card-subtitle">Support card subtitle</h6-->
-                                        <p class="card-text">Est un verre réfléchissant qui répond à la double exigence des architectes,
-                                            à savoir le fonctionnel et l’esthétique, convenant parfaitement pour les utilisations de contrôle solaire
-                                            et réduction de l’éblouissement. <br>
-                                            Il est destiné à la plupart des types de vitrages de façade dans les bâtiments résidentiels,
-                                            bureaux, commerce, bâtiments scolaires, et bâtiments industriels.
-                                        </p>
-                                        <!--button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">learn more</button-->
-                                    </div>
-                                </div>
-
-                                <div class="card">
-                                    <img src="img/products/verre-decore.jpg" class="img-fluid" alt="Le verre décoré">
-                                    <div class="card-body">
-                                        <h4 class="card-title">Verre décoré</h4>
-                                        <!--h6 class="card-subtitle">Support card subtitle</h6-->
-                                        <p class="card-text">Le verre décoré de couleurs translucides et transparentes pour décoration
-                                            de votre bâtiment ou espace de bureau moderne.
-                                            Il vient dans une variété des formes et des dessins multicolores, dans le but de créer un effet visuel plus audacieux.
-                                        </p>
-                                        <!--<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">learn more</button>-->
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <hr>
-
-        <section id="services" style="padding-top: 70px; padding-bottom:70px;">
-            <div class="container text-left py-5">
-                <h2>Nos services</h2>
-                <ul>
-                    <li>Import: import de tous les produits verriers de partout dans le monde.</li>
-                    <li>Distribution: distribution de tous les produits verriers dans tout le Maroc où nos produits de qualité et
-                        notre logistique efficiente ont fait leur preuve.</li>
-                    <li>Transformation du verre: découpe et l’usinage du verre pour le bâtiment et l’aménagement avec une créativité sans limites.</li>
-                </ul>
-            </div>
-        </section>
-        <hr>
-        <section id="contact" >
-            <div class="container text-left py-5">
-                <h2>Contact</h2>
-                <div>🏠 329 Rue 6, Quartier Namae, Bensouda, Fès, Maroc</div>
-                <div>📱+212-68888-2138</div>
-                <div><a href="mailto:radi@rt.ma?Subject=Enquiry" target="_top">📧 radi@rt.ma</a></div>
-            </div>
-        </section>
-
         <a href="#" class="btn btn-primary scrollUp">
             <i class="fa fa-arrow-circle-o-up"></i>
         </a>
     </main>
     <!-- Footer -->
     <footer id="footer">
-        <p class="copyright">
-            <a target="_blank" title="Radi Trading" href="http://www.orbitthemes.com">Radi Trading</a>
-            &copy; <span id="currentYear"></span> All Rights Reserved.
-        </p>
-        <!--
-        <div class="social">
-            <a traget="_blank" href="https://facebook.com/orbitthemes" title="facebook">
-                <i class="fa fa-facebook"></i>
-            </a>
-            <a traget="_blank" href="https://twitter.com/orbitthemes" title="twitter">
-                <i class="fa fa-twitter"></i>
-            </a>
-            <a traget="_blank" href="https://plus.google.com/+orbitthemes" title="Google+" target="_blank">
-                <i class="fa fa-google-plus"></i>
-            </a>
-            <a traget="_blank" href="https://github.com/orbitthemes" title="github" target="_blank">
-                <i class="fa fa-github"></i>
-            </a>
-            <a traget="_blank" href="https://www.behance.net/orbitthemes" title="Behance" target="_blank">
-                <i class="fa fa-behance"></i>
-            </a>
-            <a traget="_blank" href="https://dribbble.com/orbitthemes" title="Dribbble" target="_blank">
-                <i class="fa fa-dribbble"></i>
-            </a>
-            <a traget="_blank" href="https://www.pinterest.com/orbitThemes/" title="Pinterest" target="_blank">
-                <i class="fa fa-pinterest"></i>
-            </a>
-            <a traget="_blank" href="https://www.reddit.com/user/orbitthemes" title="Reddit" target="_blank">
-                <i class="fa fa-reddit"></i>
-            </a>
-            <a traget="_blank" href="https://orbitthemes.com/blog/" title="RSS" target="_blank">
-                <i class="fa fa-rss"></i>
-            </a>
-        </div>
-        -->
     </footer>
     <!-- jQuery first, then Bootstrap JS. -->
     <script src="dist/jquery/jquery.min.js"></script>
