--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 
 <body>
         <section>
-            Domain for sale. a href="mailto:erradi@live.com?Subject=RT.ma Domain Enquiry" target="_top">📧 erradi@live.com</a></div>
+            <div>
+                Domain for sale. a href="mailto:erradi@live.com?Subject=RT.ma Domain Enquiry" target="_top">📧 erradi@live.com</a>
+            </div>
         </section>
         <hr>
         <a href="#" class="btn btn-primary scrollUp">
