--- a/index.html
+++ b/index.html
@@ -24,26 +24,15 @@
         }
     </style>
 </head>
-
 <body>
+    <main>
         <section>
             <div>
                 Domain for sale. a href="mailto:erradi@live.com?Subject=RT.ma Domain Enquiry" target="_top">📧 erradi@live.com</a>
             </div>
         </section>
-        <hr>
-        <a href="#" class="btn btn-primary scrollUp">
-            <i class="fa fa-arrow-circle-o-up"></i>
-        </a>
+
     </main>
-    <!-- Footer -->
-    <footer id="footer">
-    </footer>
-    <!-- jQuery first, then Bootstrap JS. -->
-    <script src="dist/jquery/jquery.min.js"></script>
-    <script src="dist/popper/popper.min.js" integrity=""></script>
-    <script src="dist/bootstrap/js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
 </body>
 
 </html>
