--- a/index.html
+++ b/index.html
@@ -17,21 +17,12 @@
     <link rel="stylesheet" href="dist/font-awesome/css/font-awesome.min.css" />
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="css/main.css">
-
-    <style>
-        body {
-            position: relative;
-        }
-    </style>
 </head>
 <body>
     <main>
-        <section>
             <div>
-                Domain for sale. a href="mailto:erradi@live.com?Subject=RT.ma Domain Enquiry" target="_top">📧 erradi@live.com</a>
+                Domain for sale. <a href="mailto:erradi@live.com?Subject=RT.ma Domain Enquiry" target="_top">📧 erradi@live.com</a>
             </div>
-        </section>
-
     </main>
 </body>
 
