--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
 </head>
 <body>
     <main>
-            <div>
-                Domain for sale. <a href="mailto:erradi@live.com?Subject=RT.ma Domain Enquiry" target="_top">📧 erradi@live.com</a>
-            </div>
+        <section class="main-banner text-center" id="home">
+            <h1 class="display-2">Domain for sale
+            </h1>
+            <p class="lead pt-3">
+                Contact <a href="mailto:erradi@live.com?Subject=RT.ma Domain Enquiry" target="_top">📧 erradi@live.com</a>
+            </p>
+        </section>
     </main>
 </body>
 
