--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <title>Radi Trading</title>
     <meta charset="utf-8">
-    <meta content="Radi Trading Website" property="og:title"/>
-    <meta name="description" content="Radi Trading Website" />
+    <meta content="rt.ma domain for sale" property="og:title"/>
+    <meta name="description" content="rt.ma" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="img/favicon/favicon-196.png" sizes="196x196" />
     <link rel="icon" type="image/png" href="favicon-96.png" sizes="96x96" />
