--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Radi Trading</title>
+    <title>rt.ma domain for sale</title>
     <meta charset="utf-8">
     <meta content="rt.ma domain for sale" property="og:title"/>
     <meta name="description" content="rt.ma" />
@@ -19,7 +19,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-    <main>
+    <main id="main" role="main">
         <section class="main-banner text-center" id="home">
             <h1 class="display-2">Domain for sale
             </h1>
